tests/snapshots/run_wpt_conformance__onnx_greater_float16_broadcast_1D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "greater.https.any.js",
    "greater float16 broadcast 1D to 4D",
    "onnx",
    "PASS",
)
