tests/snapshots/run_wpt_conformance__onnx_greater_float16_broadcast_4D_to_5D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "greater.https.any.js",
    "greater float16 broadcast 4D to 5D",
    "onnx",
    "PASS",
)
