tests/snapshots/run_wpt_conformance__onnx_greater_float32_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "greater.https.any.js",
    "greater float32 1D constant tensors",
    "onnx",
    "PASS",
)
